--- a/locale/km.json
+++ b/locale/km.json
@@ -1898,5 +1898,8 @@
   "DELETED": "ជម្រះ",
   "RESTORE_BEFORE_OPEN": "ធាតុនេះត្រូវបានបោះចោល។ ដំបូងអ្នកត្រូវតែស្ដារវាឡើងវិញដោយផ្លាស់ទីវាទៅផ្ទៃតុ មុនពេលអ្នកអាចបើកវាម្តងទៀត។",
   "TRASH_BEING_EMPTIED": "ធុងសំរាមរបស់អ្នកកំពុងត្រូវបានសម្អាត។",
-  "NOTE_ON_DATE_X": "ចំណាំពី {0}"
+  "NOTE_ON_DATE_X": "ចំណាំពី {0}",
+  "POPUP_PERMISSION": "សូម​ផ្តល់​ការអនុញ្ញាត​ឱ្យ​លេច​ឡើង (popup)",
+  "SHOW_HIDDEN_FILES": "បង្ហាញឯកសារដែលលាក់",
+  "HIDE_HIDDEN_FILES": "លាក់ឯកសារប្រព័ន្ធ"
 }
