--- a/locale/ru.json
+++ b/locale/ru.json
@@ -1898,5 +1898,8 @@
   "DELETED": "Очищено",
   "RESTORE_BEFORE_OPEN": "Этот предмет был удален. Прежде чем снова открыть его, необходимо восстановить его, переместив на рабочий стол.",
   "TRASH_BEING_EMPTIED": "Ваше мусорное ведро опорожняется.",
-  "NOTE_ON_DATE_X": "Примечание от {0}"
+  "NOTE_ON_DATE_X": "Примечание от {0}",
+  "POPUP_PERMISSION": "Пожалуйста, предоставьте разрешение на всплывающие окна",
+  "SHOW_HIDDEN_FILES": "Показать скрытые файлы",
+  "HIDE_HIDDEN_FILES": "Скрыть системные файлы"
 }
