--- a/locale/ru.json
+++ b/locale/ru.json
@@ -1901,5 +1901,6 @@
   "NOTE_ON_DATE_X": "Примечание от {0}",
   "POPUP_PERMISSION": "Пожалуйста, предоставьте разрешение на всплывающие окна",
   "SHOW_HIDDEN_FILES": "Показать скрытые файлы",
-  "HIDE_HIDDEN_FILES": "Скрыть системные файлы"
+  "HIDE_HIDDEN_FILES": "Скрыть системные файлы",
+  "GOTO_HOMEPAGE": "Перейти на домашнюю страницу"
 }
