--- a/locale/fr.json
+++ b/locale/fr.json
@@ -1901,5 +1901,6 @@
   "NOTE_ON_DATE_X": "Note du {0}",
   "POPUP_PERMISSION": "Veuillez accorder l'autorisation de pop-up",
   "SHOW_HIDDEN_FILES": "Montrer les fichiers cachés",
-  "HIDE_HIDDEN_FILES": "Cacher les fichiers système"
+  "HIDE_HIDDEN_FILES": "Cacher les fichiers système",
+  "GOTO_HOMEPAGE": "Aller à la page d'accueil"
 }
