--- a/locale/km.json
+++ b/locale/km.json
@@ -1902,5 +1902,8 @@
   "POPUP_PERMISSION": "សូម​ផ្តល់​ការអនុញ្ញាត​ឱ្យ​លេច​ឡើង (popup)",
   "SHOW_HIDDEN_FILES": "បង្ហាញឯកសារដែលលាក់",
   "HIDE_HIDDEN_FILES": "លាក់ឯកសារប្រព័ន្ធ",
-  "GOTO_HOMEPAGE": "ទៅកាន់ទំព័រដើម"
+  "GOTO_HOMEPAGE": "ទៅកាន់ទំព័រដើម",
+  "SBX_NO_THANKS": "ទេ អរគុណ។ ខ្ញុំគ្រាន់តែចង់សាកល្បង។",
+  "NOT_A_BOT": "សូមបិទបង្អួចនេះ ដើម្បីបញ្ជាក់ថាអ្នកមិនមែនជា bot ទេ។",
+  "SERVER_BUSY": "យើងសុំទោស ម៉ាស៊ីនមេរបស់យើងកំពុងជួបប្រទះនឹងបន្ទុកធ្ងន់។ សូមព្យាយាមម្តងទៀតនៅពេលក្រោយ។"
 }
