--- a/locale/ru.json
+++ b/locale/ru.json
@@ -1902,5 +1902,8 @@
   "POPUP_PERMISSION": "Пожалуйста, предоставьте разрешение на всплывающие окна",
   "SHOW_HIDDEN_FILES": "Показать скрытые файлы",
   "HIDE_HIDDEN_FILES": "Скрыть системные файлы",
-  "GOTO_HOMEPAGE": "Перейти на домашнюю страницу"
+  "GOTO_HOMEPAGE": "Перейти на домашнюю страницу",
+  "SBX_NO_THANKS": "Нет, спасибо. Я просто хочу попробовать.",
+  "NOT_A_BOT": "Пожалуйста, закройте это окно, чтобы подтвердить, что вы не бот.",
+  "SERVER_BUSY": "К сожалению, наш сервер сейчас испытывает большую нагрузку. Попробуйте позже."
 }
