--- a/locale/es.json
+++ b/locale/es.json
@@ -117,5 +117,9 @@
   "POPUP_PERMISSION": "Por favor, conceda permiso para ventanas emergentes",
   "SHOW_HIDDEN_FILES": "Mostrar archivos ocultos",
   "HIDE_HIDDEN_FILES": "Ocultar archivos del sistema",
-  "GOTO_HOMEPAGE": "Ir a la página de inicio"
+  "GOTO_HOMEPAGE": "Ir a la página de inicio",
+  "SBX_NO_THANKS": "No, gracias. Solo quiero intentarlo.",
+  "TRY_AGAIN_LATER": "Algo salió mal. ¡Inténtalo de nuevo más tarde!",
+  "NOT_A_BOT": "Por favor, cierra esta ventana para confirmar que no eres un bot",
+  "SERVER_BUSY": "Lo sentimos, nuestro servidor está experimentando mucha carga. Inténtalo de nuevo más tarde."
 }
