--- a/locale/fr.json
+++ b/locale/fr.json
@@ -1902,5 +1902,8 @@
   "POPUP_PERMISSION": "Veuillez accorder l'autorisation de pop-up",
   "SHOW_HIDDEN_FILES": "Montrer les fichiers cachés",
   "HIDE_HIDDEN_FILES": "Cacher les fichiers système",
-  "GOTO_HOMEPAGE": "Aller à la page d'accueil"
+  "GOTO_HOMEPAGE": "Aller à la page d'accueil",
+  "SBX_NO_THANKS": "Non, merci. Je veux seulement essayer.",
+  "NOT_A_BOT": "Veuillez fermer cette fenêtre pour confirmer que vous n'êtes pas un robot",
+  "SERVER_BUSY": "Nous sommes désolés, notre serveur rencontre en ce moment une charge importante. Veuillez reessayer plus tard."
 }
