--- a/locale/ru.json
+++ b/locale/ru.json
@@ -1886,7 +1886,7 @@
   "USER": "Пользователь",
   "QUOTA_PRIVATE_HUB": "Внутренние общие папки {0}",
   "QUOTA_DMZ_HUB": "Внешние общие папки {0}",
-  "CONFIRM_FILENAME_CONFLICT": "Файл {0} уже существует. Хотите заменить его?",
+  "CONFIRM_FILENAME_CONFLICT": "Файл с таким именем ({0}) уже существует. Что вы хотите сделать?",
   "MAKE_HOMEPAGE": "Сделать домашней страницей",
   "START": "Начинать",
   "QUOTA_EXCEEDED": "Ваша квота превышена",
@@ -1905,5 +1905,6 @@
   "GOTO_HOMEPAGE": "Перейти на домашнюю страницу",
   "SBX_NO_THANKS": "Нет, спасибо. Я просто хочу попробовать.",
   "NOT_A_BOT": "Пожалуйста, закройте это окно, чтобы подтвердить, что вы не бот.",
-  "SERVER_BUSY": "К сожалению, наш сервер сейчас испытывает большую нагрузку. Попробуйте позже."
+  "SERVER_BUSY": "К сожалению, наш сервер сейчас испытывает большую нагрузку. Попробуйте позже.",
+  "CONFIRM_DIRNAME_CONFLICT": "Каталог с таким именем ({0}) уже существует. Что вы хотите сделать?"
 }
