--- a/locale/km.json
+++ b/locale/km.json
@@ -343,7 +343,6 @@
   "HOMETAG": "ស្លាកសញ្ញាទំព័រដើម",
   "HOME_PHONE": "ទូរស័ព្ទផ្ទះ",
   "HORIZONTAL": "ជំនាញ",
-  "HOURS": "ម៉ោង",
   "HOVERBOTTOMNAV": "ដាក់លើការរុករកខាងក្រោម",
   "HOVERPREVNEXT": "លើកមុន/បន្ទាប់",
   "HOW_TO": "តើ​វា​ដំណើរការ​ដោយ​របៀបណា​?",
@@ -1906,5 +1905,8 @@
   "SBX_NO_THANKS": "ទេ អរគុណ។ ខ្ញុំគ្រាន់តែចង់សាកល្បង។",
   "NOT_A_BOT": "សូមបិទបង្អួចនេះ ដើម្បីបញ្ជាក់ថាអ្នកមិនមែនជា bot ទេ។",
   "SERVER_BUSY": "យើងសុំទោស ម៉ាស៊ីនមេរបស់យើងកំពុងជួបប្រទះនឹងបន្ទុកធ្ងន់។ សូមព្យាយាមម្តងទៀតនៅពេលក្រោយ។",
-  "CONFIRM_DIRNAME_CONFLICT": "មានថតដែលមានឈ្មោះដូចគ្នា ({0}) រួចហើយ។ តើអ្នកចង់ធ្វើអ្វី?"
+  "CONFIRM_DIRNAME_CONFLICT": "មានថតដែលមានឈ្មោះដូចគ្នា ({0}) រួចហើយ។ តើអ្នកចង់ធ្វើអ្វី?",
+  "MONTHS": "ខែ",
+  "YEARS": "ឆ្នាំ",
+  "HOURS": "ម៉ោង"
 }
