--- a/locale/ru.json
+++ b/locale/ru.json
@@ -348,7 +348,6 @@
   "HOMETAG": "Тег главной страницы",
   "HOME_PHONE": "Домашний телефон",
   "HORIZONTAL": "Горизонтальный",
-  "HOURS": "часов",
   "HOVERBOTTOMNAV": "Нижняя панель навигации",
   "HOVERPREVNEXT": "Предыдущее/Следующее наведение",
   "HOW_TO": "Как это работает?",
@@ -1906,5 +1905,8 @@
   "SBX_NO_THANKS": "Нет, спасибо. Я просто хочу попробовать.",
   "NOT_A_BOT": "Пожалуйста, закройте это окно, чтобы подтвердить, что вы не бот.",
   "SERVER_BUSY": "К сожалению, наш сервер сейчас испытывает большую нагрузку. Попробуйте позже.",
-  "CONFIRM_DIRNAME_CONFLICT": "Каталог с таким именем ({0}) уже существует. Что вы хотите сделать?"
+  "CONFIRM_DIRNAME_CONFLICT": "Каталог с таким именем ({0}) уже существует. Что вы хотите сделать?",
+  "MONTHS": "Месяцы",
+  "YEARS": "Годы",
+  "HOURS": "Часы"
 }
