--- a/locale/fr.json
+++ b/locale/fr.json
@@ -348,7 +348,6 @@
   "HOMETAG": "Hashtag de la page accueil",
   "HOME_PHONE": "Téléphone domicile",
   "HORIZONTAL": "Horizontal",
-  "HOURS": "heure(s)",
   "HOVERBOTTOMNAV": "Survol navigation bas",
   "HOVERPREVNEXT": "Survol de suivant / précédent",
   "HOW_TO": "Comment ça marche ?",
@@ -1906,5 +1905,8 @@
   "SBX_NO_THANKS": "Non, merci. Je veux seulement essayer.",
   "NOT_A_BOT": "Veuillez fermer cette fenêtre pour confirmer que vous n'êtes pas un robot",
   "SERVER_BUSY": "Nous sommes désolés, notre serveur rencontre en ce moment une charge importante. Veuillez reessayer plus tard.",
-  "CONFIRM_DIRNAME_CONFLICT": "Il existe déjà un répertoire portant le même nom ({0}). Que souhaitez-vous faire ?"
+  "CONFIRM_DIRNAME_CONFLICT": "Il existe déjà un répertoire portant le même nom ({0}). Que souhaitez-vous faire ?",
+  "MONTHS": "Mois",
+  "YEARS": "Années",
+  "HOURS": "Heure(s)"
 }
