--- a/desktop/locale/km.json
+++ b/desktop/locale/km.json
@@ -49,8 +49,8 @@
   "SYNC_OFF": "ឈប់",
   "SYNC_POWER": "បិទ",
   "OPTIMIZATION": "ការបង្កើនប្រសិទ្ធភាព",
-  "ECONOMY": "សេដ្ឋកិច្ច",
-  "IMMEDIATE": "ភ្លាមៗ",
+  "SELECTIVE": "ជ្រើសរើស",
+  "FULL": "ពេញលេញ",
   "CONFIRM_FILES_DELETION": "ឯកសារ {0} ត្រូវបានលុបចេញពីថាសរឹងរបស់អ្នក។ តើអ្នកចង់ឱ្យការលុបនេះឆ្លុះបញ្ចាំងនៅលើម៉ាស៊ីនមេ Drumee របស់អ្នកដែរទេ?",
   "SECURIRY_ALERT": "ការ​ជូន​ដំណឹង​សន្តិសុខ",
   "FILE_BEING_EDITED": "បច្ចុប្បន្នឯកសារនេះកំពុងត្រូវបានកែសម្រួលដោយ {0}។ ការផ្លាស់ប្តូររបស់អ្នកនឹងមិនត្រូវបានរក្សាទុកនៅលើម៉ាស៊ីនមេ Drumee របស់អ្នកទេ។",
@@ -117,9 +117,9 @@
   "CANNOT_DO_X": "មិនអាច {0} {1}",
   "RENAME_OR_MOVE": "ប្តូរឈ្មោះឬផ្លាស់ទី",
   "CHANGE_SYNC_MODE": "ផ្លាស់ប្តូររបៀបសមកាលកម្ម",
-  "SYNC_GO_IMMEDIATE_MODE": "អ្នកនឹងប្តូរទៅរបៀបធ្វើសមកាលកម្មភ្លាមៗ។",
-  "IMMEDIATE_MODE_TIPS": "អ្វីគ្រប់យ៉ាងនៅលើកុំព្យូទ័រ Drumee របស់អ្នកនឹងធ្វើសមកាលកម្មដោយស្វ័យប្រវត្តិទៅដ្រាយកុំព្យូទ័ររបស់អ្នក។ ជម្រើសនេះនឹងត្រូវការទំហំថាស {0} នៅលើកុំព្យូទ័ររបស់អ្នក។",
+  "SWITCH_TO_FULL_SYNC": "អ្នកនឹងចូលទៅក្នុងរបៀបសមកាលកម្មពេញលេញ។",
+  "FULL_SYNC_TIPS": "អ្វីគ្រប់យ៉ាងនៅលើកុំព្យូទ័រ Drumee របស់អ្នកនឹងធ្វើសមកាលកម្មដោយស្វ័យប្រវត្តិទៅដ្រាយកុំព្យូទ័ររបស់អ្នក។ ជម្រើសនេះនឹងត្រូវការទំហំថាស {0} នៅលើកុំព្យូទ័ររបស់អ្នក។",
   "YOUR_DISK_CAPACITY": "您的磁盘容量为 {0}",
-  "SYNC_GO_ECONOMY_MODE": "អ្នកនឹងចូលទៅក្នុងរបៀបសមកាលកម្មសន្សំសំចៃ។",
-  "ECONOMY_MODE_TIPS": "ធាតុនៅលើកុំព្យូទ័រ Drumee របស់អ្នកនឹងធ្វើសមកាលកម្មនៅពេលអ្នកបើកថតឯកសារនៅលើវា។ ថតរងនឹងត្រូវបានដកចេញពីការធ្វើសមកាលកម្ម។ ទោះយ៉ាងណាក៏ដោយ ដរាបណាពួកវាត្រូវបានបើក ធាតុខាងក្នុងនឹងធ្វើសមកាលកម្ម។"
+  "SWITCH_TO_SELECTIVE_SYNC": "អ្នកនឹងដំណើរការរបៀបធ្វើសមកាលកម្មដែលបានជ្រើសរើស",
+  "SELECTIVE_SYNC_TIPS": "ធាតុនៅលើកុំព្យូទ័រ Drumee របស់អ្នកនឹងធ្វើសមកាលកម្មនៅពេលអ្នកបើកថតឯកសារនៅលើវា។ ថតរងនឹងត្រូវបានដកចេញពីការធ្វើសមកាលកម្ម។ ទោះយ៉ាងណាក៏ដោយ ដរាបណាពួកវាត្រូវបានបើក ធាតុខាងក្នុងនឹងធ្វើសមកាលកម្ម។"
 }
