--- a/desktop/locale/ru.json
+++ b/desktop/locale/ru.json
@@ -50,8 +50,8 @@
   "SYNC_OFF": "Остановлено",
   "SYNC_POWER": "Вкл выкл",
   "OPTIMIZATION": "Оптимизация",
-  "ECONOMY": "Экономический",
-  "IMMEDIATE": "Немедленный",
+  "SELECTIVE": "Избирательный",
+  "FULL": "Полный",
   "CONFIRM_FILES_DELETION": "{0} файлов были удалены с вашего жесткого диска. Вы хотите, чтобы это удаление отражалось в облаке?",
   "SECURIRY_ALERT": "Предупреждение системы безопасности",
   "FILE_BEING_EDITED": "Этот файл в настоящее время редактируется {0}. Ваши изменения не будут сохранены на вашем сервере Drumee.",
@@ -118,9 +118,9 @@
   "CANNOT_DO_X": "Невозможно {0} {1}",
   "RENAME_OR_MOVE": "переименовать или переместить",
   "CHANGE_SYNC_MODE": "Изменить режим синхронизации",
-  "SYNC_GO_IMMEDIATE_MODE": "Вы перейдете в режим немедленной синхронизации.",
-  "IMMEDIATE_MODE_TIPS": "Все на вашем рабочем столе Drumee автоматически синхронизируется с диском вашего компьютера. Для этого варианта потребуется {0} дискового пространства на вашем компьютере.",
+  "SWITCH_TO_FULL_SYNC": "Вы войдете в режим полной синхронизации.",
+  "FULL_SYNC_TIPS": "Все на вашем рабочем столе Drumee автоматически синхронизируется с диском вашего компьютера. Для этого варианта потребуется {0} дискового пространства на вашем компьютере.",
   "YOUR_DISK_CAPACITY": "Емкость вашего диска составляет {0}",
-  "SYNC_GO_ECONOMY_MODE": "Вы войдете в экономичный режим синхронизации.",
-  "ECONOMY_MODE_TIPS": "Элементы на рабочем столе Drumee будут синхронизироваться при открытии папок на нем. Подпапки будут исключены из синхронизации. Однако, как только они будут открыты, элементы внутри, в свою очередь, будут синхронизированы."
+  "SWITCH_TO_SELECTIVE_SYNC": "Вы активируете режим выборочной синхронизации.",
+  "SELECTIVE_SYNC_TIPS": "Элементы на рабочем столе Drumee будут синхронизироваться при открытии папок на нем. Подпапки будут исключены из синхронизации. Однако, как только они будут открыты, элементы внутри, в свою очередь, будут синхронизированы."
 }
