--- a/src/drumee/widgets/electron/locale/en.json
+++ b/src/drumee/widgets/electron/locale/en.json
@@ -4,11 +4,11 @@
   "PROGRESSIVE": "Progressive",
   "NO_SYNC_TIPS": "No item belonging to this folder will be synchronized. Neither from your computer, nor from Drumee",
   "NO_SYNC": "No synchronization",
-  "IMMEDIATE_SYNC": "Immediate synchronization",
-  "ECONOMY_SYNC": "Economy synchronization",
+  "FULL_SYNC": "Full synchronization",
+  "SELECTIVE_SYNC": "Selective synchronization",
   "SYNC_UNCONFIGURED": "Files on your computer <b>{0}</b> are not yet synced to your Drumee Server <b>{1}</b>. You can do this by choosing one of the following modes:",
-  "IMMEDIATE_MODE_TIPS": "Everything on your Drumee desktop will automatically sync to your computer's drive. This option will require {0} disk space on your computer.",
-  "ECONOMY_MODE_TIPS": "Items on your Drumee desktop will sync as you open the folders on it. Subfolders will be excluded from synchronization. However, as soon as they are opened, the elements inside will in turn be synchronized.",
+  "FULL_SYNC_TIPS": "Everything on your Drumee desktop will automatically sync to your computer's drive. This option will require {0} disk space on your computer.",
+  "SELECTIVE_SYNC_TIPS": "Items on your Drumee desktop will only be synced when you explicitly enable syncing by right-clicking on the icon.<br>\n\nEnabling or disabling a folder will apply to all items it contains.<br>\n\nWhen you enable syncing for an item inside a disabled folder, it will automatically be enabled.<br>",
   "ENABLE_SYNC": "Enable synchronization",
   "DISABLE_SYNC": "Disable synchronization",
   "SYNC_IN_PROGRESS": "Synchronization in progress",
@@ -76,7 +76,7 @@
   "SAVE_TO_LOCAL": "Save in local folder",
   "RENAME_IN_LOCAL": "Rename locally",
   "MOVE_IN_LOCAL": "Move locally",
-  "SET_IMMEDIATE_SYNC": "You set \"immediate synchronisation\"",
+  "FULL_SYNC_SELECTED": "You selected \"full synchronization\"",
   "SWITCH_SYNC_BETWEEN_MODE": "If you’be made a mistake clic immediately on “economic“ on synchronization top menu",
   "USE_CLOUD_FILENAME": "Use name from cloud",
   "USE_LOCAL_NAME": "Use local name",
