--- a/src/drumee/widgets/electron/locale/es.json
+++ b/src/drumee/widgets/electron/locale/es.json
@@ -29,7 +29,7 @@
   "SAVE_TO_LOCAL": "Guardar localmente",
   "RENAME_IN_LOCAL": "Renombrar localmente",
   "MOVE_IN_LOCAL": "Mover localmente",
-  "SET_IMMEDIATE_SYNC": "Configuraste \"sincronización inmediata\"",
+  "FULL_SYNC_SELECTED": "Has elegido \"sincronización completa\"",
   "SWITCH_SYNC_BETWEEN_MODE": "Si ha cometido un error, haga clic inmediatamente en \"económico\" en el menú superior de sincronización.",
   "USE_CLOUD_FILENAME": "Usar nombre de la nube",
   "USE_LOCAL_NAME": "Usar nombre local",
@@ -55,14 +55,14 @@
   "DISABLE_SYNC": "Deshabilitar la sincronización",
   "DISPLAY": "Mostrar",
   "DONT_SHOW_TIPS_AGAIN": "No mostrar este mensaje de nuevo",
-  "ECONOMY_MODE_TIPS": "Los elementos de su escritorio Drumee se sincronizarán a medida que abra las carpetas que contiene. Las subcarpetas quedarán excluidas de la sincronización. Sin embargo, tan pronto como se abran, los elementos del interior se sincronizarán a su vez.",
-  "ECONOMY_SYNC": "Sincronización económica",
+  "SELECTIVE_SYNC_TIPS": "Los elementos de tu escritorio Drumee solo se sincronizarán si activas la sincronización explícitamente haciendo clic derecho en el icono.<br>\n\nActivar o desactivar una carpeta se aplicará a todos los elementos que contenga.<br>\n\nAl activar la sincronización de un elemento dentro de una carpeta desactivada, esta se activará automáticamente.<br>",
+  "SELECTIVE_SYNC": "Sincronización selectiva",
   "ENABLE_SYNC": "Habilitar sincronización",
   "FAILED_GET_MANIFEST": "Se produjo un error al obtener su manifiesto en la nube. Por favor contacte con nuestro departamento de soporte.",
   "FILE_LOCKED_BY": "El archivo {0} está siendo modificado actualmente por {1}.",
   "HIGH_RATE_CHANGE": "Se han modificado muchos archivos en muy poco tiempo. Podría ser malware, tal vez ransomware. Si es así, que no cunda el pánico. Drumee ha bloqueado la sincronización de sus archivos con la nube. Puede restaurar todos sus archivos desde Drumee Cloud seleccionando la opción Restablecer en el menú de sincronización.",
-  "IMMEDIATE_MODE_TIPS": "Todo lo que haya en su escritorio Drumee se sincronizará automáticamente con la unidad de su computadora. Esta opción requerirá {0} espacio en disco en su computadora.",
-  "IMMEDIATE_SYNC": "Sincronización inmediata",
+  "FULL_SYNC_TIPS": "Todo lo que haya en su escritorio Drumee se sincronizará automáticamente con la unidad de su computadora. Esta opción requerirá {0} espacio en disco en su computadora.",
+  "FULL_SYNC": "Sincronización completa",
   "ITEMS_CHANGED": "{0} archivos modificados",
   "ITEMS_CREATED": "{0} archivos añadidos",
   "ITEMS_DELETED": "{0} archivos eliminados",
