--- a/src/drumee/widgets/electron/locale/fr.json
+++ b/src/drumee/widgets/electron/locale/fr.json
@@ -4,11 +4,11 @@
   "PROGRESSIVE": "Progressif",
   "NO_SYNC_TIPS": "Aucun élément appartenant à ce dossier ne sera synchronisé. Ni depuis votre ordinateur, ni depuis Drumee.",
   "NO_SYNC": "Pas de synchronisation",
-  "IMMEDIATE_SYNC": "Synchronisation immédiate",
-  "ECONOMY_SYNC": "Synchronisation économique",
+  "FULL_SYNC": "Synchronisation complète",
+  "SELECTIVE_SYNC": "Synchronisation sélective",
   "SYNC_UNCONFIGURED": "Les fichiers sur votre ordinateur <b>{0}</b> ne sont pas encore synchronisés avec votre serveur Drumee <b>{1}</b>. Vous pouvez le faire en choisissant l'un des modes suivants :",
-  "IMMEDIATE_MODE_TIPS": "Tous les élément de votre bureau Drumee seront synchronisés automatiquement avec le disque de votre ordinateur. Cette option nécessitera {0} d'espace disque sur votre ordinateur.",
-  "ECONOMY_MODE_TIPS": "Les éléments de votre bureau Drumee seront synchronisés au fur et à mesure que vous ouvrez les dossiers qui s'y trouvent. Les sous-dossiers seront exclus de la synchronisation. Cependant, dès leur ouverture, les éléments à l'intérieur seront synchronisés à leur tour.",
+  "FULL_SYNC_TIPS": "Tous les élément de votre bureau Drumee seront synchronisés automatiquement avec le disque de votre ordinateur. Cette option nécessitera {0} d'espace disque sur votre ordinateur.",
+  "SELECTIVE_SYNC_TIPS": "Les éléments de votre bureau Drumee ne seront synchronisés que lorsque vous aurez explicitement activé la synchronisation, via un clique-droit sur l'icône en question.<br>\nL'activation, ou la désactivation, d'un dossier s'appliquera à tous les éléments qu'il contient.<br>\nLorsqu'on active la synchronisation d'un élément à l'intérieur d'un dossier désactivé, celui-ci sera automatiquement activé.  ",
   "ENABLE_SYNC": "Activer la synchronisation",
   "DISABLE_SYNC": "Désactiver la synchronisation",
   "SYNC_IN_PROGRESS": "Synchronisation en cours",
@@ -76,7 +76,7 @@
   "SAVE_TO_LOCAL": "Enregistrer en local",
   "RENAME_IN_LOCAL": "Renommer en local",
   "MOVE_IN_LOCAL": "Déplacer en local",
-  "SET_IMMEDIATE_SYNC": "Vous paramétrez la \"synchronisation immédiate\"",
+  "FULL_SYNC_SELECTED": "Vous avez chois la \"synchronisation complète\"",
   "SWITCH_SYNC_BETWEEN_MODE": "Si vous vous êtes trompé cliquez tout de suite sur « économique » dans le menu du haut de la synchronisation",
   "USE_CLOUD_FILENAME": "Utiliser le nom du cloud",
   "USE_LOCAL_NAME": "Utiliser le nom local",
