--- a/src/drumee/widgets/electron/locale/km.json
+++ b/src/drumee/widgets/electron/locale/km.json
@@ -4,11 +4,11 @@
   "PROGRESSIVE": "ហត្ថកម្ម",
   "NO_SYNC_TIPS": "គ្មានធាតុណាមួយដែលជាកម្មសិទ្ធិរបស់ថតឯកសារនេះនឹងត្រូវបានធ្វើសមកាលកម្មទេ។ មិនថាមកពីកុំព្យូទ័ររបស់អ្នក ឬមកពី Drumee ទេ។",
   "NO_SYNC": "គ្មានការធ្វើសមកាលកម្មទេ។",
-  "IMMEDIATE_SYNC": "ការធ្វើសមកាលកម្មភ្លាមៗ",
-  "ECONOMY_SYNC": "ការធ្វើសមកាលកម្មសេដ្ឋកិច្ច",
+  "FULL_SYNC": "ការធ្វើសមកាលកម្មពេញលេញ",
+  "SELECTIVE_SYNC": "ការធ្វើសមកាលកម្មជ្រើសរើស",
   "SYNC_UNCONFIGURED": "ឯកសារនៅលើកុំព្យូទ័ររបស់អ្នក <b>{0}</b> មិនទាន់ត្រូវបានធ្វើសមកាលកម្មទៅនឹង Drumee Server របស់អ្នក <b>{1}</b> ទេ។ អ្នក​អាច​ធ្វើ​វា​បាន​ដោយ​ជ្រើសរើស​របៀប​មួយ​ក្នុង​ចំណោម​របៀប​ខាងក្រោម៖",
-  "IMMEDIATE_MODE_TIPS": "អ្វីគ្រប់យ៉ាងនៅលើកុំព្យូទ័រ Drumee របស់អ្នកនឹងធ្វើសមកាលកម្មដោយស្វ័យប្រវត្តិទៅដ្រាយកុំព្យូទ័ររបស់អ្នក។ ជម្រើសនេះនឹងត្រូវការទំហំថាស {0} នៅលើកុំព្យូទ័ររបស់អ្នក។",
-  "ECONOMY_MODE_TIPS": "ធាតុនៅលើកុំព្យូទ័រ Drumee របស់អ្នកនឹងធ្វើសមកាលកម្មនៅពេលអ្នកបើកថតឯកសារនៅលើវា។ ថតរងនឹងត្រូវបានដកចេញពីការធ្វើសមកាលកម្ម។ ទោះយ៉ាងណាក៏ដោយ ដរាបណាពួកវាត្រូវបានបើក ធាតុខាងក្នុងនឹងធ្វើសមកាលកម្ម។",
+  "FULL_SYNC_TIPS": "អ្វីគ្រប់យ៉ាងនៅលើកុំព្យូទ័រ Drumee របស់អ្នកនឹងធ្វើសមកាលកម្មដោយស្វ័យប្រវត្តិទៅដ្រាយកុំព្យូទ័ររបស់អ្នក។ ជម្រើសនេះនឹងត្រូវការទំហំថាស {0} នៅលើកុំព្យូទ័ររបស់អ្នក។",
+  "SELECTIVE_SYNC_TIPS": "ធាតុនៅលើកុំព្យូទ័រលើតុ Drumee របស់អ្នកនឹងត្រូវបានធ្វើសមកាលកម្មតែនៅពេលដែលអ្នកបើកការធ្វើសមកាលកម្មយ៉ាងច្បាស់ដោយចុចខាងស្តាំលើរូបតំណាង។<br>\n\nការបើក ឬបិទថតឯកសារនឹងអនុវត្តចំពោះធាតុទាំងអស់ដែលវាមាន។<br>\n\nនៅពេលអ្នកបើកការធ្វើសមកាលកម្មសម្រាប់ធាតុនៅក្នុងថតដែលបានបិទ វានឹងបើកដោយស្វ័យប្រវត្តិ។< br>",
   "ENABLE_SYNC": "បើកដំណើរការធ្វើសមកាលកម្ម",
   "DISABLE_SYNC": "បិទការធ្វើសមកាលកម្ម",
   "SYNC_IN_PROGRESS": "ការធ្វើសមកាលកម្មកំពុងដំណើរការ",
@@ -76,7 +76,7 @@
   "SAVE_TO_LOCAL": "រក្សាទុកក្នុងមូលដ្ឋាន",
   "RENAME_IN_LOCAL": "ប្តូរឈ្មោះក្នុងថតមូលដ្ឋាន",
   "MOVE_IN_LOCAL": "ផ្លាស់ទីទៅមូលដ្ឋាន",
-  "SET_IMMEDIATE_SYNC": "អ្នកកំណត់ \"ការធ្វើសមកាលកម្មភ្លាមៗ\"",
+  "FULL_SYNC_SELECTED": "អ្នកបានជ្រើសរើស \"ការធ្វើសមកាលកម្មពេញលេញ\"",
   "SWITCH_SYNC_BETWEEN_MODE": "ប្រសិនបើអ្នកមានកំហុស សូមចុចលើ \"សេដ្ឋកិច្ច\" ភ្លាមៗនៅលើម៉ឺនុយកំពូលនៃការធ្វើសមកាលកម្ម",
   "USE_CLOUD_FILENAME": "ប្រើឈ្មោះពីពពក",
   "USE_LOCAL_NAME": "ប្រើឈ្មោះកុំព្យូទ័រ",
