--- a/src/drumee/widgets/electron/locale/ru.json
+++ b/src/drumee/widgets/electron/locale/ru.json
@@ -4,11 +4,11 @@
   "PROGRESSIVE": "Прогрессивный",
   "NO_SYNC_TIPS": "Ни один элемент, принадлежащий этой папке, не будет синхронизирован. Ни с компа, ни с Друми",
   "NO_SYNC": "Нет синхронизации",
-  "IMMEDIATE_SYNC": "Немедленная синхронизация",
-  "ECONOMY_SYNC": "Экономическая синхронизация",
+  "FULL_SYNC": "Полная синхронизация",
+  "SELECTIVE_SYNC": "Избирательная синхронизация",
   "SYNC_UNCONFIGURED": "Файлы на вашем компьютере <b>{0}</b> еще не синхронизированы с вашим сервером Drumee <b>{1}</b>. Вы можете сделать это, выбрав один из следующих режимов:",
-  "IMMEDIATE_MODE_TIPS": "Все на вашем рабочем столе Drumee автоматически синхронизируется с диском вашего компьютера. Для этого варианта потребуется {0} дискового пространства на вашем компьютере.",
-  "ECONOMY_MODE_TIPS": "Элементы на рабочем столе Drumee будут синхронизироваться при открытии папок на нем. Подпапки будут исключены из синхронизации. Однако, как только они будут открыты, элементы внутри, в свою очередь, будут синхронизированы.",
+  "FULL_SYNC_TIPS": "Все на вашем рабочем столе Drumee автоматически синхронизируется с диском вашего компьютера. Для этого варианта потребуется {0} дискового пространства на вашем компьютере.",
+  "SELECTIVE_SYNC_TIPS": "Элементы на рабочем столе Drumee будут синхронизироваться только при условии явного включения синхронизации путем щелчка правой кнопкой мыши по значку.<br>\n\nВключение или отключение папки будет применено ко всем содержащимся в ней элементам.<br>\n\nПри включении синхронизации для элемента внутри отключенной папки он будет включен автоматически.<br>",
   "ENABLE_SYNC": "Включить синхронизацию",
   "DISABLE_SYNC": "Отключить синхронизацию",
   "SYNC_IN_PROGRESS": "Идет синхронизация",
@@ -76,7 +76,7 @@
   "SAVE_TO_LOCAL": "Сохранить локально",
   "RENAME_IN_LOCAL": "Переименовать локально",
   "MOVE_IN_LOCAL": "Переехать на местный",
-  "SET_IMMEDIATE_SYNC": "Вы установили \"немедленную синхронизацию\"",
+  "FULL_SYNC_SELECTED": "Вы выбрали «полную синхронизацию»",
   "SWITCH_SYNC_BETWEEN_MODE": "Если вы допустили ошибку, нажмите сразу на «экономический» в верхнем меню синхронизации.",
   "USE_CLOUD_FILENAME": "Использовать имя облака",
   "USE_LOCAL_NAME": "Использовать местное имя",
