--- a/src/drumee/widgets/electron/locale/zh.json
+++ b/src/drumee/widgets/electron/locale/zh.json
@@ -3,11 +3,11 @@
   "COMPLETE": "自动化",
   "PROGRESSIVE": "进步",
   "NO_SYNC": "不同步",
-  "IMMEDIATE_SYNC": "立即同步",
-  "ECONOMY_SYNC": "经济同步",
+  "FULL_SYNC": "完全同步",
+  "SELECTIVE_SYNC": "选择性同步",
   "SYNC_UNCONFIGURED": "您计算机 <b>{0}</b> 上的文件尚未同步到您的 Drumee 服务器 <b>{1}</b>。您可以选择以下模式之一进行同步：",
-  "IMMEDIATE_MODE_TIPS": "您计算机上的文件尚未同步到您的 Drumee 帐户。 您可以通过选择以下模式之一来执行此操作： Drumee 桌面上的所有项目将自动与您的计算机磁盘同步。 此选项将需要您计算机上的 {0} 磁盘空间。",
-  "ECONOMY_MODE_TIPS": "当您打开桌面上的文件夹时，您 Drumee 桌面上的项目将同步。 子文件夹将从同步中排除。 但是，一旦打开它们，里面的元素就会依次同步。",
+  "FULL_SYNC_TIPS": "您计算机上的文件尚未同步到您的 Drumee 帐户。 您可以通过选择以下模式之一来执行此操作： Drumee 桌面上的所有项目将自动与您的计算机磁盘同步。 此选项将需要您计算机上的 {0} 磁盘空间。",
+  "SELECTIVE_SYNC_TIPS": "只有通过右键单击图标明确启用同步功能，Drumee 桌面上的项目才会同步。<br>\n\n启用或禁用文件夹将应用于其中包含的所有项目。<br>\n\n当您为已禁用文件夹中的项目启用同步功能时，该项目将自动启用。<br>",
   "ENABLE_SYNC": "启用同步",
   "DISABLE_SYNC": "禁用同步",
   "SYNC_IN_PROGRESS": "正在进行同步",
@@ -75,7 +75,7 @@
   "SAVE_TO_LOCAL": "保存在本地",
   "RENAME_IN_LOCAL": "在本地重命名",
   "MOVE_IN_LOCAL": "移动到本地",
-  "SET_IMMEDIATE_SYNC": "您設置“立即同步”",
+  "FULL_SYNC_SELECTED": "您已选择“完全同步”",
   "SWITCH_SYNC_BETWEEN_MODE": "如果您犯了一個錯誤，請立即點擊同步頂部菜單上的“經濟”",
   "USE_CLOUD_FILENAME": "使用云端名称",
   "USE_LOCAL_NAME": "使用本地名称",
